@@ -1,3 +1,8 @@
+2009-02-12  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_luv.c: Fix handling of tiled logluv images. 
+	http://bugzilla.maptools.org/show_bug.cgi?id=2005
+
 2009-01-23  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libtiff/tif_predict.c: Add support for 32bit integer horz. predictors.
